--- a/styles/styles.css
+++ b/styles/styles.css
@@ -570,6 +570,10 @@ video {
   left: 0px;
 }
 
+.right-8 {
+  right: 2rem;
+}
+
 .top-0 {
   top: 0px;
 }
@@ -578,20 +582,56 @@ video {
   top: 1.25rem;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
 .right-0 {
   right: 0px;
 }
 
-.right-2 {
-  right: 0.5rem;
+.right-3 {
+  right: 0.75rem;
+}
+
+.top-3 {
+  top: 0.75rem;
 }
 
 .right-5 {
   right: 1.25rem;
 }
 
-.right-8 {
-  right: 2rem;
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
+.bottom-16 {
+  bottom: 4rem;
+}
+
+.-top-0 {
+  top: -0px;
+}
+
+.-top-full {
+  top: -100%;
+}
+
+.-bottom-full {
+  bottom: -100%;
+}
+
+.-top-0\.5 {
+  top: -0.125rem;
+}
+
+.bottom-full {
+  bottom: 100%;
 }
 
 .z-20 {
@@ -610,28 +650,8 @@ video {
   margin-bottom: 2rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.mb-16 {
-  margin-bottom: 4rem;
-}
-
-.mb-24 {
-  margin-bottom: 6rem;
-}
-
-.mb-20 {
-  margin-bottom: 5rem;
-}
-
 .mt-10 {
   margin-top: 2.5rem;
-}
-
-.mb-14 {
-  margin-bottom: 3.5rem;
 }
 
 .flex {
@@ -650,28 +670,24 @@ video {
   height: 100vh;
 }
 
-.w-24 {
-  width: 6rem;
-}
-
 .w-full {
   width: 100%;
 }
 
-.w-4 {
-  width: 1rem;
+.w-screen {
+  width: 100vw;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-7 {
+  width: 1.75rem;
 }
 
 .w-8 {
   width: 2rem;
-}
-
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-5 {
-  width: 1.25rem;
 }
 
 .flex-col {
@@ -690,59 +706,32 @@ video {
   justify-content: space-between;
 }
 
-.gap-10 {
-  gap: 2.5rem;
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .gap-3 {
   gap: 0.75rem;
 }
 
-.gap-4 {
-  gap: 1rem;
+.gap-6 {
+  gap: 1.5rem;
 }
 
-.gap-2 {
-  gap: 0.5rem;
+.gap-5 {
+  gap: 1.25rem;
 }
 
 .gap-7 {
   gap: 1.75rem;
 }
 
-.gap-6 {
-  gap: 1.5rem;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
+.gap-4 {
+  gap: 1rem;
 }
 
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.bg-verde_catolica {
-  --tw-bg-opacity: 1;
-  background-color: rgb(54 162 188 / var(--tw-bg-opacity));
 }
 
 .bg-amarillo_catolica {
@@ -755,29 +744,19 @@ video {
   background-color: rgb(27 92 255 / var(--tw-bg-opacity));
 }
 
-.bg-red-400 {
+.bg-black {
   --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-green-500 {
+.bg-verde_catolica {
   --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+  background-color: rgb(54 162 188 / var(--tw-bg-opacity));
 }
 
-.bg-violet-600 {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(124 58 237 / var(--tw-bg-opacity));
-}
-
-.bg-violet-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(109 40 217 / var(--tw-bg-opacity));
-}
-
-.bg-pink-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 39 119 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -785,16 +764,13 @@ video {
      object-fit: cover;
 }
 
-.p-4 {
-  padding: 1rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
-}
-
 .p-1 {
   padding: 0.25rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-24 {
@@ -807,29 +783,14 @@ video {
   padding-right: 30%;
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-}
-
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
 }
 
 .text-center {
@@ -852,81 +813,14 @@ video {
   font-family: clanpro_news, arial;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.text-9xl {
-  font-size: 8rem;
-  line-height: 1;
-}
-
-.text-8xl {
-  font-size: 6rem;
-  line-height: 1;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
-.leading-5 {
-  line-height: 1.25rem;
-}
-
-.leading-10 {
-  line-height: 2.5rem;
-}
-
-.leading-loose {
-  line-height: 2;
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-gray-300 {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-amarillo_catolica {
@@ -934,18 +828,58 @@ video {
   color: rgb(244 218 64 / var(--tw-text-opacity));
 }
 
-.text-verde_catolica {
-  --tw-text-opacity: 1;
-  color: rgb(54 162 188 / var(--tw-text-opacity));
-}
-
 .text-azul_catolica {
   --tw-text-opacity: 1;
   color: rgb(27 92 255 / var(--tw-text-opacity));
 }
 
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+.text-verde_catolica {
+  --tw-text-opacity: 1;
+  color: rgb(54 162 188 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
 .opacity-50 {
   opacity: 0.5;
+}
+
+.opacity-30 {
+  opacity: 0.3;
+}
+
+.opacity-70 {
+  opacity: 0.7;
+}
+
+.opacity-80 {
+  opacity: 0.8;
+}
+
+.opacity-90 {
+  opacity: 0.9;
+}
+
+.opacity-95 {
+  opacity: 0.95;
 }
 
 .outline {
@@ -956,16 +890,16 @@ video {
   outline-width: 1px;
 }
 
-.outline-verde_catolica {
-  outline-color: #36A2BC;
-}
-
 .outline-amarillo_catolica {
   outline-color: #F4DA40;
 }
 
 .outline-azul_catolica {
   outline-color: #1B5CFF;
+}
+
+.outline-verde_catolica {
+  outline-color: #36A2BC;
 }
 
 .transition {
@@ -980,16 +914,8 @@ video {
   transition-duration: 500ms;
 }
 
-.duration-300 {
-  transition-duration: 300ms;
-}
-
 .hover\:cursor-pointer:hover {
   cursor: pointer;
-}
-
-.hover\:bg-transparent:hover {
-  background-color: transparent;
 }
 
 .hover\:bg-azul_catolica:hover {
@@ -1007,14 +933,170 @@ video {
   background-color: rgb(219 39 119 / var(--tw-bg-opacity));
 }
 
-.hover\:outline:hover {
-  outline-style: solid;
+.hover\:bg-transparent:hover {
+  background-color: transparent;
 }
 
-.hover\:outline-verde_catolica:hover {
-  outline-color: #36A2BC;
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.hover\:outline-amarillo_catolica:hover {
-  outline-color: #F4DA40;
+.hover\:bg-gray-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
+.hover\:text-black:hover {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+@media (min-width: 540px) {
+  .\35 40px\:absolute {
+    position: absolute;
+  }
+
+  .\35 40px\:relative {
+    position: relative;
+  }
+
+  .\35 40px\:left-0 {
+    left: 0px;
+  }
+
+  .\35 40px\:top-0 {
+    top: 0px;
+  }
+
+  .\35 40px\:z-50 {
+    z-index: 50;
+  }
+
+  .\35 40px\:hidden {
+    display: none;
+  }
+
+  .\35 40px\:h-full {
+    height: 100%;
+  }
+
+  .\35 40px\:h-screen {
+    height: 100vh;
+  }
+
+  .\35 40px\:w-4 {
+    width: 1rem;
+  }
+
+  .\35 40px\:w-5 {
+    width: 1.25rem;
+  }
+
+  .\35 40px\:w-14 {
+    width: 3.5rem;
+  }
+
+  .\35 40px\:w-full {
+    width: 100%;
+  }
+
+  .\35 40px\:w-screen {
+    width: 100vw;
+  }
+
+  .\35 40px\:flex-col {
+    flex-direction: column;
+  }
+
+  .\35 40px\:bg-white {
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+
+  .\35 40px\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .\35 40px\:pt-5 {
+    padding-top: 1.25rem;
+  }
+
+  .\35 40px\:text-black {
+    --tw-text-opacity: 1;
+    color: rgb(0 0 0 / var(--tw-text-opacity));
+  }
+}
+
+@media (min-width: 940px) {
+  .\39 40px\:block {
+    display: block;
+  }
+
+  .\39 40px\:inline-block {
+    display: inline-block;
+  }
+
+  .\39 40px\:hidden {
+    display: none;
+  }
+
+  .\39 40px\:w-20 {
+    width: 5rem;
+  }
+
+  .\39 40px\:w-5 {
+    width: 1.25rem;
+  }
+
+  .\39 40px\:px-14 {
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
+  }
+
+  .\39 40px\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .\39 40px\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .\39 40px\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .\39 40px\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+@media (min-width: 1260px) {
+  .\31 260px\:w-24 {
+    width: 6rem;
+  }
+
+  .\31 260px\:w-6 {
+    width: 1.5rem;
+  }
+
+  .\31 260px\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .\31 260px\:text-8xl {
+    font-size: 6rem;
+    line-height: 1;
+  }
+
+  .\31 260px\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
