--- a/styles/styles.css
+++ b/styles/styles.css
@@ -566,6 +566,11 @@ video {
   position: relative;
 }
 
+.inset-x-0 {
+  left: 0px;
+  right: 0px;
+}
+
 .bottom-16 {
   bottom: 4rem;
 }
@@ -596,6 +601,10 @@ video {
 
 .top-5 {
   top: 1.25rem;
+}
+
+.top-\[-100px\] {
+  top: -100px;
 }
 
 .z-20 {
@@ -634,6 +643,10 @@ video {
   height: 100vh;
 }
 
+.h-0 {
+  height: 0px;
+}
+
 .w-7 {
   width: 1.75rem;
 }
@@ -644,6 +657,15 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.-translate-y-full {
+  --tw-translate-y: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .flex-col {
@@ -728,11 +750,6 @@ video {
 .px-24 {
   padding-left: 6rem;
   padding-right: 6rem;
-}
-
-.px-25\% {
-  padding-left: 30%;
-  padding-right: 30%;
 }
 
 .px-4 {
@@ -832,8 +849,32 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-transform {
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-500 {
   transition-duration: 500ms;
+}
+
+.duration-700 {
+  transition-duration: 700ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
+}
+
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hover\:cursor-pointer:hover {
@@ -874,34 +915,100 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-@media (min-width: 540px) {
-  .\35 40px\:top-0 {
+@media (min-width: 320px) {
+  .\33 20px\:top-0 {
     top: 0px;
   }
 
-  .\35 40px\:hidden {
+  .\33 20px\:-mt-36 {
+    margin-top: -9rem;
+  }
+
+  .\33 20px\:mb-32 {
+    margin-bottom: 8rem;
+  }
+
+  .\33 20px\:inline-block {
+    display: inline-block;
+  }
+
+  .\33 20px\:hidden {
     display: none;
   }
 
-  .\35 40px\:w-14 {
-    width: 3.5rem;
+  .\33 20px\:h-850px {
+    height: 850px;
   }
 
-  .\35 40px\:w-5 {
-    width: 1.25rem;
+  .\33 20px\:w-16 {
+    width: 4rem;
   }
 
-  .\35 40px\:px-4 {
+  .\33 20px\:w-8 {
+    width: 2rem;
+  }
+
+  .\33 20px\:bg-white {
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+
+  .\33 20px\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
   }
 
-  .\35 40px\:pt-5 {
-    padding-top: 1.25rem;
+  .\33 20px\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .\33 20px\:px-5\% {
+    padding-left: 8%;
+    padding-right: 8%;
+  }
+
+  .\33 20px\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .\33 20px\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .\33 20px\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .\33 20px\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .\33 20px\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+}
+
+@media (min-width: 540px) {
+  .\35 40px\:w-5 {
+    width: 1.25rem;
   }
 }
 
 @media (min-width: 940px) {
+  .\39 40px\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
+  .\39 40px\:mt-0 {
+    margin-top: 0px;
+  }
+
   .\39 40px\:inline-block {
     display: inline-block;
   }
@@ -914,13 +1021,27 @@ video {
     display: none;
   }
 
-  .\39 40px\:w-20 {
-    width: 5rem;
+  .\39 40px\:w-16 {
+    width: 4rem;
+  }
+
+  .\39 40px\:bg-transparent {
+    background-color: transparent;
   }
 
   .\39 40px\:px-14 {
     padding-left: 3.5rem;
     padding-right: 3.5rem;
+  }
+
+  .\39 40px\:px-25\% {
+    padding-left: 30%;
+    padding-right: 30%;
+  }
+
+  .\39 40px\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
   }
 
   .\39 40px\:text-4xl {
@@ -945,25 +1066,41 @@ video {
 }
 
 @media (min-width: 1260px) {
-  .\31 260px\:w-24 {
-    width: 6rem;
-  }
-
   .\31 260px\:w-6 {
     width: 1.5rem;
   }
 
-  .\31 260px\:text-5xl {
+  .\31 260px\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+
+  .\31 260px\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 1360px) {
+  .\31 360px\:h-screen {
+    height: 100vh;
+  }
+
+  .\31 360px\:w-20 {
+    width: 5rem;
+  }
+
+  .\31 360px\:text-5xl {
     font-size: 3rem;
     line-height: 1;
   }
 
-  .\31 260px\:text-8xl {
+  .\31 360px\:text-8xl {
     font-size: 6rem;
     line-height: 1;
   }
 
-  .\31 260px\:text-base {
+  .\31 360px\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
   }
