--- a/styles/styles.css
+++ b/styles/styles.css
@@ -870,14 +870,6 @@ video {
     top: 0px;
   }
 
-  .\33 20px\:mt-36 {
-    margin-top: 9rem;
-  }
-
-  .\33 20px\:mt-12 {
-    margin-top: 3rem;
-  }
-
   .\33 20px\:mt-10 {
     margin-top: 2.5rem;
   }
@@ -890,7 +882,7 @@ video {
     display: none;
   }
 
-  .\33 20px\:h-650px {
+  .\33 20px\:h-550px {
     height: 550px;
   }
 
@@ -954,6 +946,38 @@ video {
   }
 }
 
+@media (min-width: 820px) {
+  .\38 20px\:inline-block {
+    display: inline-block;
+  }
+
+  .\38 20px\:flex {
+    display: flex;
+  }
+
+  .\38 20px\:hidden {
+    display: none;
+  }
+
+  .\38 20px\:w-16 {
+    width: 4rem;
+  }
+
+  .\38 20px\:bg-transparent {
+    background-color: transparent;
+  }
+
+  .\38 20px\:px-14 {
+    padding-left: 3.5rem;
+    padding-right: 3.5rem;
+  }
+
+  .\38 20px\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
+}
+
 @media (min-width: 940px) {
   .\39 40px\:mb-8 {
     margin-bottom: 2rem;
@@ -973,6 +997,10 @@ video {
 
   .\39 40px\:hidden {
     display: none;
+  }
+
+  .\39 40px\:h-723px {
+    height: 723px;
   }
 
   .\39 40px\:w-16 {
