--- a/styles/styles.css
+++ b/styles/styles.css
@@ -682,6 +682,10 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .bg-amarillo_catolica {
   --tw-bg-opacity: 1;
   background-color: rgb(244 218 64 / var(--tw-bg-opacity));
@@ -870,12 +874,64 @@ video {
     top: 0px;
   }
 
+  .\33 20px\:m-auto {
+    margin: auto;
+  }
+
+  .\33 20px\:mx-5 {
+    margin-left: 1.25rem;
+    margin-right: 1.25rem;
+  }
+
+  .\33 20px\:my-10 {
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+  }
+
+  .\33 20px\:my-5 {
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
+  }
+
+  .\33 20px\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .\33 20px\:mb-3 {
+    margin-bottom: 0.75rem;
+  }
+
+  .\33 20px\:mb-6 {
+    margin-bottom: 1.5rem;
+  }
+
   .\33 20px\:mt-10 {
     margin-top: 2.5rem;
   }
 
+  .\33 20px\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .\33 20px\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
+  .\33 20px\:mb-5 {
+    margin-bottom: 1.25rem;
+  }
+
+  .\33 20px\:mb-2 {
+    margin-bottom: 0.5rem;
+  }
+
   .\33 20px\:inline-block {
     display: inline-block;
+  }
+
+  .\33 20px\:flex {
+    display: flex;
   }
 
   .\33 20px\:hidden {
@@ -886,6 +942,18 @@ video {
     height: 550px;
   }
 
+  .\33 20px\:h-14 {
+    height: 3.5rem;
+  }
+
+  .\33 20px\:h-full {
+    height: 100%;
+  }
+
+  .\33 20px\:h-32 {
+    height: 8rem;
+  }
+
   .\33 20px\:w-16 {
     width: 4rem;
   }
@@ -894,9 +962,59 @@ video {
     width: 2rem;
   }
 
+  .\33 20px\:w-14 {
+    width: 3.5rem;
+  }
+
+  .\33 20px\:w-full {
+    width: 100%;
+  }
+
+  .\33 20px\:w-32 {
+    width: 8rem;
+  }
+
+  .\33 20px\:w-64 {
+    width: 16rem;
+  }
+
+  .\33 20px\:flex-wrap {
+    flex-wrap: wrap;
+  }
+
+  .\33 20px\:items-center {
+    align-items: center;
+  }
+
+  .\33 20px\:justify-center {
+    justify-content: center;
+  }
+
+  .\33 20px\:gap-4 {
+    gap: 1rem;
+  }
+
+  .\33 20px\:gap-8 {
+    gap: 2rem;
+  }
+
+  .\33 20px\:rounded-full {
+    border-radius: 9999px;
+  }
+
   .\33 20px\:bg-white {
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  }
+
+  .\33 20px\:bg-red-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  }
+
+  .\33 20px\:object-cover {
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 
   .\33 20px\:px-4 {
@@ -919,6 +1037,22 @@ video {
     padding-bottom: 0.75rem;
   }
 
+  .\33 20px\:text-center {
+    text-align: center;
+  }
+
+  .\33 20px\:font-bree_regular {
+    font-family: Bree_regular, arial;
+  }
+
+  .\33 20px\:font-helvetic {
+    font-family: helvetic, arial;
+  }
+
+  .\33 20px\:font-bree_bold {
+    font-family: Bree_bold, arial;
+  }
+
   .\33 20px\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -937,6 +1071,40 @@ video {
   .\33 20px\:text-xs {
     font-size: 0.75rem;
     line-height: 1rem;
+  }
+
+  .\33 20px\:text-15px {
+    font-size: 15px;
+  }
+
+  .\33 20px\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .\33 20px\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .\33 20px\:text-azul_catolica {
+    --tw-text-opacity: 1;
+    color: rgb(27 92 255 / var(--tw-text-opacity));
+  }
+
+  .\33 20px\:text-gris_catolica_letra {
+    --tw-text-opacity: 1;
+    color: rgb(175 175 175 / var(--tw-text-opacity));
+  }
+
+  .\33 20px\:text-verde_catolica {
+    --tw-text-opacity: 1;
+    color: rgb(54 162 188 / var(--tw-text-opacity));
+  }
+
+  .\33 20px\:text-amarillo_catolica {
+    --tw-text-opacity: 1;
+    color: rgb(244 218 64 / var(--tw-text-opacity));
   }
 }
 
