--- a/styles/styles.css
+++ b/styles/styles.css
@@ -682,10 +682,6 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded-full {
-  border-radius: 9999px;
-}
-
 .bg-amarillo_catolica {
   --tw-bg-opacity: 1;
   background-color: rgb(244 218 64 / var(--tw-bg-opacity));
@@ -827,6 +823,10 @@ video {
   transition-duration: 150ms;
 }
 
+.duration-300 {
+  transition-duration: 300ms;
+}
+
 .duration-500 {
   transition-duration: 500ms;
 }
@@ -893,9 +893,8 @@ video {
     margin-bottom: 1.25rem;
   }
 
-  .\33 20px\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
+  .\33 20px\:mb-2 {
+    margin-bottom: 0.5rem;
   }
 
   .\33 20px\:mb-3 {
@@ -910,22 +909,6 @@ video {
     margin-top: 2.5rem;
   }
 
-  .\33 20px\:mb-4 {
-    margin-bottom: 1rem;
-  }
-
-  .\33 20px\:mb-8 {
-    margin-bottom: 2rem;
-  }
-
-  .\33 20px\:mb-5 {
-    margin-bottom: 1.25rem;
-  }
-
-  .\33 20px\:mb-2 {
-    margin-bottom: 0.5rem;
-  }
-
   .\33 20px\:inline-block {
     display: inline-block;
   }
@@ -938,36 +921,20 @@ video {
     display: none;
   }
 
-  .\33 20px\:h-550px {
-    height: 550px;
+  .\33 20px\:h-32 {
+    height: 8rem;
   }
 
-  .\33 20px\:h-14 {
-    height: 3.5rem;
+  .\33 20px\:h-550px {
+    height: 550px;
   }
 
   .\33 20px\:h-full {
     height: 100%;
   }
 
-  .\33 20px\:h-32 {
-    height: 8rem;
-  }
-
   .\33 20px\:w-16 {
     width: 4rem;
-  }
-
-  .\33 20px\:w-8 {
-    width: 2rem;
-  }
-
-  .\33 20px\:w-14 {
-    width: 3.5rem;
-  }
-
-  .\33 20px\:w-full {
-    width: 100%;
   }
 
   .\33 20px\:w-32 {
@@ -978,20 +945,20 @@ video {
     width: 16rem;
   }
 
+  .\33 20px\:w-8 {
+    width: 2rem;
+  }
+
+  .\33 20px\:w-full {
+    width: 100%;
+  }
+
   .\33 20px\:flex-wrap {
     flex-wrap: wrap;
   }
 
-  .\33 20px\:items-center {
-    align-items: center;
-  }
-
   .\33 20px\:justify-center {
     justify-content: center;
-  }
-
-  .\33 20px\:gap-4 {
-    gap: 1rem;
   }
 
   .\33 20px\:gap-8 {
@@ -1005,11 +972,6 @@ video {
   .\33 20px\:bg-white {
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  }
-
-  .\33 20px\:bg-red-500 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(239 68 68 / var(--tw-bg-opacity));
   }
 
   .\33 20px\:object-cover {
@@ -1041,6 +1003,10 @@ video {
     text-align: center;
   }
 
+  .\33 20px\:font-bree_bold {
+    font-family: Bree_bold, arial;
+  }
+
   .\33 20px\:font-bree_regular {
     font-family: Bree_regular, arial;
   }
@@ -1049,8 +1015,8 @@ video {
     font-family: helvetic, arial;
   }
 
-  .\33 20px\:font-bree_bold {
-    font-family: Bree_bold, arial;
+  .\33 20px\:text-15px {
+    font-size: 15px;
   }
 
   .\33 20px\:text-3xl {
@@ -1063,6 +1029,11 @@ video {
     line-height: 2.5rem;
   }
 
+  .\33 20px\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
   .\33 20px\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
@@ -1073,17 +1044,8 @@ video {
     line-height: 1rem;
   }
 
-  .\33 20px\:text-15px {
-    font-size: 15px;
-  }
-
   .\33 20px\:text-xl {
     font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .\33 20px\:text-lg {
-    font-size: 1.125rem;
     line-height: 1.75rem;
   }
 
@@ -1094,23 +1056,39 @@ video {
 
   .\33 20px\:text-gris_catolica_letra {
     --tw-text-opacity: 1;
-    color: rgb(175 175 175 / var(--tw-text-opacity));
+    color: rgb(139 139 139 / var(--tw-text-opacity));
   }
 
   .\33 20px\:text-verde_catolica {
     --tw-text-opacity: 1;
     color: rgb(54 162 188 / var(--tw-text-opacity));
   }
+}
 
-  .\33 20px\:text-amarillo_catolica {
-    --tw-text-opacity: 1;
-    color: rgb(244 218 64 / var(--tw-text-opacity));
+@media (min-width: 440px) {
+  .\34 40px\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .\34 40px\:w-96 {
+    width: 24rem;
   }
 }
 
 @media (min-width: 540px) {
   .\35 40px\:w-5 {
     width: 1.25rem;
+  }
+
+  .\35 40px\:w-500px {
+    width: 500px;
+  }
+}
+
+@media (min-width: 700px) {
+  .\37 00px\:w-600px {
+    width: 600px;
   }
 }
 
@@ -1143,6 +1121,12 @@ video {
   .\38 20px\:py-5 {
     padding-top: 1.25rem;
     padding-bottom: 1.25rem;
+  }
+}
+
+@media (min-width: 900px) {
+  .\39 00px\:w-850px {
+    width: 850px;
   }
 }
 
@@ -1185,6 +1169,40 @@ video {
   }
 }
 
+@media (min-width: 1100px) {
+  .\31 100px\:my-10 {
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+  }
+
+  .\31 100px\:my-16 {
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+  }
+
+  .\31 100px\:flex {
+    display: flex;
+  }
+
+  .\31 100px\:w-1000px {
+    width: 1000px;
+  }
+
+  .\31 100px\:gap-20 {
+    gap: 5rem;
+  }
+
+  .\31 100px\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .\31 100px\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+}
+
 @media (min-width: 1260px) {
   .\31 260px\:w-6 {
     width: 1.5rem;
@@ -1223,5 +1241,79 @@ video {
   .\31 360px\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 1400px) {
+  .\31 400px\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
+  .\31 400px\:mt-20 {
+    margin-top: 5rem;
+  }
+
+  .\31 400px\:h-48 {
+    height: 12rem;
+  }
+
+  .\31 400px\:w-1200px {
+    width: 1200px;
+  }
+
+  .\31 400px\:w-48 {
+    width: 12rem;
+  }
+
+  .\31 400px\:w-80 {
+    width: 20rem;
+  }
+
+  .\31 400px\:gap-32 {
+    gap: 8rem;
+  }
+
+  .\31 400px\:text-center {
+    text-align: center;
+  }
+
+  .\31 400px\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .\31 400px\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .\31 400px\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .\31 400px\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .\31 400px\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .\31 400px\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+}
+
+@media (min-width: 1500px) {
+  .\31 500px\:mt-14 {
+    margin-top: 3.5rem;
+  }
+
+  .\31 500px\:w-1400px {
+    width: 1400px;
   }
 }
