--- a/styles/styles.css
+++ b/styles/styles.css
@@ -883,6 +883,11 @@ video {
     margin-right: 1.25rem;
   }
 
+  .\33 20px\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .\33 20px\:my-10 {
     margin-top: 2.5rem;
     margin-bottom: 2.5rem;
@@ -913,10 +918,6 @@ video {
     display: inline-block;
   }
 
-  .\33 20px\:flex {
-    display: flex;
-  }
-
   .\33 20px\:hidden {
     display: none;
   }
@@ -933,16 +934,12 @@ video {
     height: 100%;
   }
 
-  .\33 20px\:w-16 {
-    width: 4rem;
-  }
-
   .\33 20px\:w-32 {
     width: 8rem;
   }
 
-  .\33 20px\:w-64 {
-    width: 16rem;
+  .\33 20px\:w-52 {
+    width: 13rem;
   }
 
   .\33 20px\:w-8 {
@@ -951,18 +948,6 @@ video {
 
   .\33 20px\:w-full {
     width: 100%;
-  }
-
-  .\33 20px\:flex-wrap {
-    flex-wrap: wrap;
-  }
-
-  .\33 20px\:justify-center {
-    justify-content: center;
-  }
-
-  .\33 20px\:gap-8 {
-    gap: 2rem;
   }
 
   .\33 20px\:rounded-full {
@@ -1011,10 +996,6 @@ video {
     font-family: Bree_regular, arial;
   }
 
-  .\33 20px\:font-helvetic {
-    font-family: helvetic, arial;
-  }
-
   .\33 20px\:text-15px {
     font-size: 15px;
   }
@@ -1044,11 +1025,6 @@ video {
     line-height: 1rem;
   }
 
-  .\33 20px\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
   .\33 20px\:text-azul_catolica {
     --tw-text-opacity: 1;
     color: rgb(27 92 255 / var(--tw-text-opacity));
@@ -1062,6 +1038,12 @@ video {
   .\33 20px\:text-verde_catolica {
     --tw-text-opacity: 1;
     color: rgb(54 162 188 / var(--tw-text-opacity));
+  }
+
+  .\33 20px\:shadow-lg {
+    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 }
 
@@ -1105,8 +1087,8 @@ video {
     display: none;
   }
 
-  .\38 20px\:w-16 {
-    width: 4rem;
+  .\38 20px\:w-40 {
+    width: 10rem;
   }
 
   .\38 20px\:bg-transparent {
@@ -1122,11 +1104,26 @@ video {
     padding-top: 1.25rem;
     padding-bottom: 1.25rem;
   }
+
+  .\38 20px\:shadow-lg {
+    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
 }
 
 @media (min-width: 900px) {
   .\39 00px\:w-850px {
     width: 850px;
+  }
+
+  .\39 00px\:text-center {
+    text-align: center;
+  }
+
+  .\39 00px\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
 
@@ -1170,9 +1167,14 @@ video {
 }
 
 @media (min-width: 1100px) {
-  .\31 100px\:my-10 {
-    margin-top: 2.5rem;
-    margin-bottom: 2.5rem;
+  .\31 100px\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .\31 100px\:my-0 {
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 
   .\31 100px\:my-16 {
@@ -1180,21 +1182,33 @@ video {
     margin-bottom: 4rem;
   }
 
-  .\31 100px\:flex {
-    display: flex;
+  .\31 100px\:mt-10 {
+    margin-top: 2.5rem;
   }
 
   .\31 100px\:w-1000px {
     width: 1000px;
   }
 
-  .\31 100px\:gap-20 {
-    gap: 5rem;
+  .\31 100px\:w-3\/5 {
+    width: 60%;
   }
 
-  .\31 100px\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
+  .\31 100px\:w-full {
+    width: 100%;
+  }
+
+  .\31 100px\:text-center {
+    text-align: center;
+  }
+
+  .\31 100px\:text-15px {
+    font-size: 15px;
+  }
+
+  .\31 100px\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .\31 100px\:text-4xl {
@@ -1204,8 +1218,16 @@ video {
 }
 
 @media (min-width: 1260px) {
+  .\31 260px\:w-1200px {
+    width: 1200px;
+  }
+
   .\31 260px\:w-6 {
     width: 1.5rem;
+  }
+
+  .\31 260px\:gap-3 {
+    gap: 0.75rem;
   }
 
   .\31 260px\:px-24 {
@@ -1220,12 +1242,20 @@ video {
 }
 
 @media (min-width: 1360px) {
+  .\31 360px\:mt-20 {
+    margin-top: 5rem;
+  }
+
   .\31 360px\:h-screen {
     height: 100vh;
   }
 
-  .\31 360px\:w-20 {
-    width: 5rem;
+  .\31 360px\:w-1300px {
+    width: 1300px;
+  }
+
+  .\31 360px\:w-48 {
+    width: 12rem;
   }
 
   .\31 360px\:text-5xl {
@@ -1245,20 +1275,12 @@ video {
 }
 
 @media (min-width: 1400px) {
-  .\31 400px\:mt-10 {
-    margin-top: 2.5rem;
-  }
-
-  .\31 400px\:mt-20 {
-    margin-top: 5rem;
-  }
-
   .\31 400px\:h-48 {
     height: 12rem;
   }
 
-  .\31 400px\:w-1200px {
-    width: 1200px;
+  .\31 400px\:w-1300px {
+    width: 1300px;
   }
 
   .\31 400px\:w-48 {
@@ -1269,22 +1291,9 @@ video {
     width: 20rem;
   }
 
-  .\31 400px\:gap-32 {
-    gap: 8rem;
-  }
-
-  .\31 400px\:text-center {
-    text-align: center;
-  }
-
-  .\31 400px\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
-  .\31 400px\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
+  .\31 400px\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .\31 400px\:text-base {
@@ -1301,19 +1310,21 @@ video {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
-
-  .\31 400px\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
 }
 
 @media (min-width: 1500px) {
-  .\31 500px\:mt-14 {
-    margin-top: 3.5rem;
-  }
-
   .\31 500px\:w-1400px {
     width: 1400px;
+  }
+}
+
+@media (min-width: 1600px) {
+  .\31 600px\:w-1550px {
+    width: 1550px;
+  }
+
+  .\31 600px\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
